--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="./css/portfolio.css">
   <link rel="stylesheet" href="./css/protfolio-popup.css">
   <link rel="stylesheet" href="./css/contato.css">
+  <link rel="stylesheet" href="./css/slide.css">
   <title>Portfolio</title>
 </head>
 <body>
@@ -61,7 +62,15 @@
           <div class="home__text">
             <p>Olá meu Nome é</p>
             <h1>Janet Vazquez</h1>
-            <h2>Tradutora e Design</h2>
+            <h2 class="conteudo-slide">
+              <ol>
+                <li><span>UI / UX Design</span></li>
+                <li><span>Tradutora Espanhou</span></li>
+                <li><span>Web Design</span></li>
+                <li><span>Assistente Virtual</span></li>
+                <li><span>Vendedora Boticario</span></li>
+              </ol>
+            </h2>
             <a href="#sobre"class='btn link__item'>Mas Sobre Mim</a>
             <a href="#portfolio"class='btn link__item'>Portfolio</a>
           </div>
